--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,9 @@ color: var(--c-brand);
 
 
 /* testomoniles */
+#review{
+    margin-top: 60px;
+}
 .testomonial{
     width: 100%;
     padding: 36px 24px;
